fix: avoid overflow and hide social names in mobile view

--- a/src/static/css/input.css
+++ b/src/static/css/input.css
@@ -45,7 +45,7 @@
 
 @layer components {
   section {
-    @apply relative flex items-center md:h-[calc(100vh-64px)] w-full;
+    @apply relative flex items-center md:h-[calc(100vh-64px)] w-full overflow-x-hidden;
   }
 }
 
@@ -134,7 +134,9 @@
   #glow-about-1,
   #glow-about-2,
   #glow-services-1,
-  #glow-services-2 {
+  #glow-services-2,
+  #glow-contact-1,
+  #glow-contact-2 {
     @apply overflow-hidden;
   }
   /* Círculo para ícones */
